--- a/index.html
+++ b/index.html
@@ -18,7 +18,29 @@
 <body class="home">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-3">
+        <p>
+          I am row 1, col 1
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>
+          I am row 1, col 2
+        </p>
+      </div>
+      <div class="col-md-3">
+        <p>
+          I am row 1, col 3
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <p>
+          I am row 2, col 1
+        </p>
+      </div>
+      <div class="col-md-6">
         <div id="carousel" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
@@ -66,6 +88,26 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
+      </div>
+      <div class="col-md-3">
+        <p>I am row 2 col 3</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        <p>
+          I am row 3, col 1
+        </p>
+      </div>
+      <div class="col-md-6">
+        <p>
+          I am row 3, col 2
+        </p>
+      </div>
+      <div class="col-md-3">
+        <p>
+          I am row 3, col 3
+        </p>
       </div>
     </div>
   </div>
