--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
   <title>Bootstrap Carousel</title>
 
-  <!-- Bootstrap -->
+  <!-- Bootstrap 3.3.7 -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 
   <!-- CSS -->
   <link href="css/style.css" rel="stylesheet">
@@ -111,10 +112,12 @@
       </div>
     </div>
   </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+
+  <!-- QJUERY 1.12.4 USE WITH EITHER BOOTSTRAP VERSION 3.3.7 OR 4.0.0 -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-  <!-- Latest compiled and minified JavaScript -->
+
+  <!-- BOOTSTRAP VERSION 3.3.7 -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
   <script src="js/scripts.js"></script>
